# ARFPE

./: LICENSE  README.md
arfpe/: add_anot.ml  apply_patch.py  basic_func.py  bd_val_analysis.py  fpexception_detection.py  gen_drivfunc.py  gen_patch.py  localize_exceptions.py  math_lib.py  outdps.ml  patch_evaluation.py  plot_bar_test.py  plot_domain.py  plot_res.py  produce_patch.py  repair_exceptions.py  static_analysis.py
llvm_env/: README.md  config.sh
llvm_passes/boundvalue/: CMakeLists.txt
llvm_passes/boundvalue/boundvalue/: CMakeLists.txt
llvm_passes/boundvalue/boundvalue/src/: boundvalue.cpp
llvm_passes/excpetionDetector/dividezero/: CMakeLists.txt
llvm_passes/excpetionDetector/dividezero/dividezero/: CMakeLists.txt
llvm_passes/excpetionDetector/dividezero/dividezero/src/: dividezero.cpp
llvm_passes/excpetionDetector/fpnan/: CMakeLists.txt
llvm_passes/excpetionDetector/fpnan/fpnan/: CMakeLists.txt
llvm_passes/excpetionDetector/fpnan/fpnan/src/: fpnan.cpp
llvm_passes/excpetionDetector/overflow/: CMakeLists.txt
llvm_passes/excpetionDetector/overflow/overflow/: CMakeLists.txt
llvm_passes/excpetionDetector/overflow/overflow/src/: overflow.cpp
llvm_passes/excpetionDetector/underflow/: CMakeLists.txt
llvm_passes/excpetionDetector/underflow/underflow/: CMakeLists.txt
llvm_passes/excpetionDetector/underflow/underflow/src/: underflow.cpp
